<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.cityevents.FirstFragment"
        android:label="@string/events_list"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.cityevents.SecondFragment"
        android:label="@string/event"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.example.cityevents.InfoFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.cityevents.MapsFragment"
        android:label="@string/city_map"
        tools:layout="@layout/fragment_maps" />
</navigation>