<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FirstFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
        android:elevation="0dp"
        android:src="@android:drawable/ic_input_add"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_first"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:layout_weight="2"
                android:text="@string/events"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textview_first3"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textview_first2"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="20sp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/events_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>